Login Page Dark Mode Fixed

--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -1,13 +1,12 @@
 @import 'home';
 
-.title{
-    color: $theme-dark-blue;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    text-align: center;
+.login-title{
+    margin-top: 2vh;
+    margin-bottom: 2vh;
 }
 
 .login-container{
+    color: $theme-light-grey;
     padding-left: 10px;
     padding-right: 10px;
 }
